--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,30 @@ img {
   margin-right: 50px;
 }
 
+/*.header-link-envelop::before {
+  content: '';
+  display: inline-block;
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  background-image: url(../images/envelope.svg);
+}*/
+
+.header-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.smartphone {
+  width: 10px;
+  height: 16px;
+}
+
+.envelope {
+  width: 16px;
+  height: 12px;
+}
+
 /*------Позиционирование Студии----*/
 
 .hero-container {
@@ -108,6 +132,16 @@ img {
   margin-top: 30px;
 }
 
+.feature-icon-box {
+  background-color: var(--bg-light-color);
+  padding: 25px 100px;
+  margin-bottom: 30px;
+}
+.feature-icon {
+  width: 70px;
+  height: 70px;
+}
+
 .occupation-section {
   padding-top: 0;
 }
@@ -140,6 +174,44 @@ img {
 .team-img {
   margin-bottom: 30px;
 }
+.team-text {
+  margin-bottom: 16px;
+}
+.team-social-list {
+  display: flex;
+  justify-content: center;
+}
+.team-social-item {
+  display: flex;
+  width: 44px;
+  height: 44px;
+
+  justify-content: center;
+  align-items: center;
+}
+.team-social-item:hover,
+.team-social-item:focus {
+  background-color: var(--accent-color);
+
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.team-social-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--fill-icon-color);
+}
+
+.team-social-icon:hover,
+.team-social-icon:hover {
+  fill: var(--white-color);
+  cursor: pointer;
+}
 
 /*--Позиционирование Постоянных клиентов--*/
 
@@ -156,7 +228,6 @@ img {
   margin-top: 30px;
   padding: 16px 32px;
   border: 1px solid #afb1b8;
-  box-sizing: border-box;
   border-radius: 4px;
 }
 
@@ -164,6 +235,7 @@ img {
   width: 106px;
   height: 60px;
 }
+
 /*------Позиционирование Портфолио----*/
 
 .filter-list {
@@ -207,6 +279,26 @@ img {
 .address-item:not(:last-child) {
   margin-bottom: 9px;
 }
+.footer-icon {
+  fill: var(--white-color);
+}
+
+.footer-social-item {
+  background-color: var(--bg-footer-icon-color) f;
+  border-radius: 50%;
+}
+
+.footer-item-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
 
 :root {
   --accent-color: #2196f3;
@@ -219,6 +311,8 @@ img {
   --bg-dark-color: #2f303a;
   --project-border-color: #eeeeee;
   --header-border-color: #ececec;
+  --fill-icon-color: #afb1b8;
+  --bg-footer-icon-color: #ffffff19;
 }
 
 body {
@@ -296,7 +390,12 @@ body {
 }
 /*-------------main-Студия------------*/
 .hero-section {
-  background-color: var(--bg-dark-color);
+  background: var(--bg-dark-color);
+  background-image: linear-gradient(rgba(20, 23, 59, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero.jpg);
+  background-size: 1600px;
+  background-position: center;
+  background-repeat: no-repeat;
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -447,6 +546,11 @@ body {
   margin-top: 30px;
 }
 
+.project-item:hover,
+.project-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .project-title {
   font-weight: 700;
   font-size: 18px;
